<resources>
    <string name="app_name">Text On Photo</string>
    <string name="facebook_app_id">384031082213548</string>
    <string name="fb_login_protocol_scheme">fb384031082213548</string>

    <string name="press_back_again">Press Back again to exit</string>

    <string name="rate_title">Share and rate</string>
    <string name="rate_content">Share this app to your friend and rate 5* to support the developer</string>

    <string name="no_internet">No Internet connection</string>

    <string name="accept_to_get_images">You need to accept this permission to get all images on this device !</string>
    <string name="accept_to_take_camera">You need to accept this permission to take a photo !</string>
    <string name="accept_to_save_image">You need to accept this permission to save image on this device !</string>
    <string name="accept_to_delete_image">You need to accept this permission to delete this image !</string>

    <string name="choose_image">Choose Image</string>
    <string name="image_store">Images Store</string>
    <string name="my_image">My Images</string>
    <string name="photo">photo</string>
    <string name="downloading">Downloading</string>

    <string name="edit_image">Photo Editor</string>
    <string name="insert_words">Add Text</string>
    <string name="more_fonts">More Fonts</string>
    <string name="sticker">Stickers</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>

    <string name="filter">Filter</string>
    <string name="change_photo">Replace</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="flip_vertical">Flip V</string>
    <string name="flip_horizontal">Flip H</string>

    <string name="add">Add</string>
    <string name="edit_text">Edit</string>
    <string name="font">Font</string>
    <string name="size_text">Size</string>
    <string name="color_text">Color</string>
    <string name="style_text">Styles</string>
    <string name="border">Border</string>

    <string name="save">Save</string>
    <string name="root">root</string>

    <string name="choose_sticker">Choose Sticker</string>

    <string name="effect">Effect</string>
    <string name="adjust">Adjust</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="applying_filter">Filter applied !</string>

    <string name="brush_size">Brush size</string>
    <string name="opacity">Opacity</string>

    <string name="text_input">Enter text here</string>

    <string name="save_setting">Save mode</string>
    <string name="quick_save">Quick save (Save with default resolution)</string>
    <string name="hd_save">HD save (Save with HD resolution)</string>
    <string name="saving">Saving</string>

    <string name="home">Home</string>
    <string name="congratulation">Congratulation !</string>
    <string name="save_photo_successfully">Your picture has been saved successfully !</string>
    <string name="your_photo_save_to">( Your image has been saved with path:</string>
    <string name="share_with">Share with</string>

    <string name="check_network_and_try_again">Check network connection and try again</string>
    <string name="try_again">Try again</string>
    <string name="more">More</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="text_apply_dialog_pick_color">Apply</string>
    <string name="text_cancel_dialog_pick_color">Cancel</string>
    <string name="text_style_shadow">Shadow</string>
    <string name="text_style_stroke">Stroke</string>
    <string name="text_style_clear">Default</string>
    <string name="text_style_random">Random</string>
    <string name="background_color">Background Color</string>
    <string name="alpha">Alpha</string>
    <string name="radius">Radius</string>
    <string name="width">Width</string>
    <string name="height">Height</string>

    <string name="confirm_save_before_close">Image has not been saved, do you want to save before exiting ?</string>
    <string name="confirm">Confirm</string>
    <string name="dont_save">Dont save</string>
    <string name="cancel">Cancel</string>
    <string name="save_failed">Save failed, please try again</string>

    <string name="back">Back</string>

    <string name="text_name_default_style">Styles %d</string>

    <!--Photo detail Screen-->
    <string name="delete">Delete</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="photo_deleted">Photo deleted !</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_fail">Delete failed, please try again !</string>
    <string name="confirm_delete">Do you really want to delete this photo ?</string>
    <string name="wallpaper">Set Wallpaper</string>

    <!--Setting screen-->
    <string name="text_setting_saved_location">Saved Location</string>
    <string name="text_setting_send_feedback">Send Feedback</string>
    <string name="text_setting_rate_app">Rate 5 Stars</string>
    <string name="text_setting_share_app">Share %s</string>
    <string name="text_setting_follow">Follow us on Facebook</string>
    <string name="text_setting_check_for_update">Check For Update</string>
    <string name="text_setting_current_version">Current Version %s</string>
    <string name="setting">Setting</string>

    <string name="feedback">Feedback</string>
    <string name="write_feedback">Write feedback</string>
    <string name="write_at_least">You need to write at least 10 characters to send feedback</string>
    <string name="send">Send</string>
    <string name="loading">Loading</string>

    <string name="error_occur">Error occur, please try again later !</string>
    <string name="please_wait">Please wait a second !</string>

    <string name="load_photo_failed">Load image unsuccessfully ! Do you want to return the Choose Image screen ?</string>
    <string name="ok">OK</string>
    <string name="photo_cant_open">This photo cannot open !</string>

    <string name="watch_video_ad_to_download_font">Download font</string>
    <string name="download_more_fonts">Download more fonts</string>
    <string name="fonts">Fonts</string>
    <string name="downloading_font">Downloading font</string>
    <string name="font_downloaded">Font package downloaded successfully !\nAnd added to your fonts list</string>
    <string name="touch_to_collapse">Touch to collapse</string>
    <string name="touch_to_expand">Touch to expand</string>

    <string name="watch_to_download_photo">Would you like to watch the promotional video to download this photo ?</string>
    <string name="watch_to_download_font">Would you like to watch the promotional video to download this font package ?</string>
    <string name="do_u_want_stop_downloading">Do you want stop downloading ?</string>
</resources>