<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/save_setting"
        android:textColor="@color/purple_lv_3"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:alpha="0.1"
        android:background="@android:color/black" />

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:mrl_rippleAlpha="0.1"
        app:mrl_rippleDelayClick="true"
        app:mrl_rippleDuration="500">

        <LinearLayout
            android:id="@+id/quick_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:text="@string/quick_save"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:mrl_rippleAlpha="0.1"
        app:mrl_rippleDelayClick="true"
        app:mrl_rippleDuration="500">

        <LinearLayout
            android:id="@+id/hd_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:text="@string/hd_save"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
</LinearLayout>