<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dip"
            android:paddingBottom="16dip">

            <TextView
                android:id="@+id/lbl_title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:fontFamily="@font/svn_redressed"
                android:text="@string/watch_to_download_font"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.9" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.96" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="16dip"
            android:paddingTop="16dip"
            android:paddingEnd="16dip"
            android:paddingBottom="10dip">

            <Button
                android:id="@+id/btn_no"
                android:layout_width="120dip"
                android:layout_height="40dip"
                android:background="@drawable/bg_selector_button_dialog"
                android:gravity="center"
                android:padding="8dip"
                android:text="@string/no"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="120.0dip"
                android:layout_height="40dip"
                android:layout_marginLeft="8dip"
                android:background="@drawable/bg_selector_button_dialog"
                android:gravity="center"
                android:padding="8dip"
                android:text="@string/yes"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>