<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.8"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/dialog_color_picker"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <net.margaritov.preference.colorpicker.ColorPickerView
                android:id="@+id/color_picker_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layerType="software"
                android:tag="portrait" />

            <LinearLayout
                android:id="@+id/text_hex_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/press_color_to_apply"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/hex_val"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="HEX"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    android:maxLength="7"
                    android:singleLine="true"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <net.margaritov.preference.colorpicker.ColorPickerPanelView
                    android:id="@+id/old_color_panel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:gravity="center"
                    android:text="→"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <net.margaritov.preference.colorpicker.ColorPickerPanelView
                    android:id="@+id/new_color_panel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/btnCancelColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:text="@string/text_cancel_dialog_pick_color"
                android:textAllCaps="false"
                android:textColor="@drawable/btn_click_pickcolor"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnApplyColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:text="@string/text_apply_dialog_pick_color"
                android:textAllCaps="false"
                android:textColor="@drawable/btn_apply_color_selector"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>